# TT_hw

./: CMakeLists.txt  Makefile  README.md  build.sh  rebuild.sh
include/: application.h  bound_var_substitutor.h  free_visitor.h  hw2.h  hw3.h  hw4.h  hw5.h  hw6.h  lambda.h  parser.h  print_visitor.h  substitute_visitor.h  variable.h  vertex.h  visitor.h
include/equation/: parser.h  vertex.h
include/lambda/: application.h  bound_var_substitutor.h  free_visitor.h  lambda.h  parser.h  pointer.h  print_visitor.h  substitute_visitor.h  to_string_visitor.h  variable.h  vertex.h  visitor.h
resources/: in  out  task3.in  task3.out  task4.in  task4.out  task5.in  task6.in  task6.out  task6q.in
source/: application.cpp  hw1.cpp  hw2.cpp  hw3.cpp  hw4.cpp  hw5.cpp  hw6.cpp  lambda.cpp  main.cpp  parser.cpp  variable.cpp
source/equation/: parser.cpp  vertex.cpp
source/lambda/: application.cpp  lambda.cpp  parser.cpp  print_visitor.cpp  variable.cpp
task1/: CMakeLists.txt
task1/resources/: task1.in  task1.out
task1/source/: main.cpp
task2/: CMakeLists.txt
task2/resources/: task2.in  task2.out
task2/source/: main.cpp
task3/: CMakeLists.txt
task3/include/: hw1.h  hw3.h  hw4.h  parser.h  print_visitor.h  substitute_visitor.h  to_string_visitor.h
task3/resources/: in  out
task3/source/: hw1.cpp  hw3.cpp  lambda.cpp  main.cpp  print_visitor.cpp
task3/test/: hw3.cpp
test/: hw3.cpp  hw4.cpp  hw5.cpp  hw6.cpp
